fix: URL e  plural em curso
